[package]
name = "gmod-buttplug"
version = "0.2.0"
edition = "2021"
publish = false
license = "BSD-3-Clause"
authors = ["SummerBasilisk"]
repository = "https://github.com/SummerBasilisk/gmod-buttplug"

[workspace]
members = ["xtask"]

[lib]
name = "gmcl_buttplug"
crate-type = ["cdylib"]

[dependencies]
gmod = { version = "17", default-features = false, features = ["gmcl"] }

# Buttplug v10 is split across workspace crates. `buttplug_client_in_process`'s
# default features pull in every hardware manager we list below — exactly what
# we want: btleplug, xinput (Windows), hid, serial, lovense dongle, lovense
# connect service. We still need to name each subcrate explicitly so our source
# can `use` their public types.
buttplug_client = "10"
buttplug_client_in_process = "10"
buttplug_core = "10"
buttplug_server = "10"
buttplug_server_device_config = "10"
buttplug_server_hwmgr_btleplug = "10"
buttplug_server_hwmgr_hid = "10"
buttplug_server_hwmgr_lovense_connect = "10"
buttplug_server_hwmgr_lovense_dongle = "10"
buttplug_server_hwmgr_serial = "10"

tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
futures = "0.3"
crossbeam-channel = "0.5"

# Tiny blocking HTTP client for the on-load GitHub-release version check.
# Pulls in rustls via default features (already in the dep graph via buttplug).
# Pair it with serde_json for the `{"tag_name": "..."}` field extraction.
ureq = { version = "2", features = ["json"] }
serde_json = "1"

# Direct rustls dep so we can call `crypto::ring::default_provider().install_default()`
# on module load. Without this, the vendored lovense_connect (which uses reqwest's
# `rustls-no-provider` feature) would have no CryptoProvider and its first HTTPS
# call would panic. `ring` is the single provider we compile in — see the
# `[patch.crates-io]` entry below for the backstory.
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[target.'cfg(target_os = "windows")'.dependencies]
buttplug_server_hwmgr_xinput = "10"

# Force a single rustls crypto provider across the tree. Upstream
# buttplug_server_hwmgr_lovense_connect 10.0.2 enables rustls's `ring` feature
# on its direct rustls dep but enables reqwest's `rustls` feature (which pulls
# in `aws-lc-rs`) — so both providers ended up compiled, and aws-lc-sys forced
# NASM on Windows i686. The vendored copy under vendor/ flips reqwest to
# `rustls-no-provider`; the top-level `rustls` dep above ships ring, and
# lib.rs calls `install_default()` at load time.
[patch.crates-io]
buttplug_server_hwmgr_lovense_connect = { path = "vendor/buttplug_server_hwmgr_lovense_connect" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
